Part3/ex3-2/manifests-ping/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: irmindev/exercise-1-9
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          livenessProbe:
            httpGet:
                path: /pingpong
                port: 3001
          readinessProbe:
              httpGet:
                  path: /pingpong
                  port: 3001
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
